# rustdog

./: .envrc  .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  EPIPHANY_LOG.md  EPIPHANY_LOG__local_default_atomic_lease.md  EPIPHANY_LOG__local_default_legacy_retirement.md  EPIPHANY_LOG__local_default_registry_recovery.md  EPIPHANY_LOG__non_mouse_control_research.md  ERRORFIX.md  ERRORFIX__ax_plan.md  ERRORFIX__computer_use_density.md  ERRORFIX__local_default_atomic_lease.md  ERRORFIX__local_default_legacy_retirement.md  ERRORFIX__local_default_registry_recovery.md  ERRORFIX__mouse_e2e.md  ERRORFIX__non_mouse_semantic_control.md  ERRORFIX__observation_refmap_commit_smoke.md  ERRORFIX__observation_refmap_p2.md  ERRORFIX__observation_refmap_p3.md  ERRORFIX__observation_refmap_p4.md  ERRORFIX__observation_refmap_p5.md  ERRORFIX__recording_journal.md  ERRORFIX__recording_lifecycle.md  ERRORFIX__recording_redaction.md  ERRORFIX__window_activate_fix.md  ERRORFIX__window_plan.md  ERRORFIX__xhs_home_click.md  ERRORFIX__zenoh_runtime_split.md  EXPERIENCE.md  LATER_PLANS.md  LATER_PLANS__computer_use_density.md  LATER_PLANS__local_default_atomic_lease.md  LATER_PLANS__local_default_legacy_retirement.md  LATER_PLANS__local_default_registry_recovery.md  LATER_PLANS__mouse_ralph.md  LATER_PLANS__non_mouse_semantic_control.md  LATER_PLANS__observation_refmap_p1.md  LATER_PLANS__observation_refmap_p2.md  (+89 more)
.ralph/: agents.json  bootstrap-selection.json  current-events  events-20260516-160737.jsonl  events-20260516-161010.jsonl  events.jsonl  resolved-config.yml
docs/: glossary.md
(+242 files in other folders)
