[package]
name = "rustdog"
version = "3.0.0"
authors = ["robiot"]
description = "The Modern Port Listener and Reverse Shell"
license = "GPL-3.0-only"
repository = "https://github.com/raiscui/rustdog"
edition = "2021"

[[bin]]
name = "rdog"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
colored = "2.1.0"
rustyline = "14.0.0"
log = "0.4.22"
fern = { version = "0.6.2", features = ["colored"] }
figment = { version = "0.10.19", features = ["env", "toml", "test"] }
serde = { version = "1.0.228", features = ["derive"] }
enigo = "0.6.1"
base64 = "0.22.1"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
httparse = "1.10.1"
rand = "0.9.2"
sha1 = "0.10.6"
url = "2.5.8"
uuid = { version = "1.18.1", features = ["v4"] }
xcap = "0.9.4"
zenoh = { version = "1.8.0", default-features = false, features = ["transport_serial", "transport_tcp", "transport_udp"] }

[target.'cfg(target_os = "macos")'.dependencies]
sck-rs = { git = "https://github.com/screenpipe/sck-rs" }

[target.'cfg(unix)'.dependencies]
termios = "0.3"
signal-hook = "0.3.17"
portable-pty = "0.9.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Console"] }
